--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -15,6 +15,7 @@ ARG ELIXIR_VERSION=1.14.5
 ARG OTP_VERSION=26.0.1
 ARG DEBIAN_VERSION=bullseye-20230612-slim
 
+
 ARG BUILDER_IMAGE="hexpm/elixir:${ELIXIR_VERSION}-erlang-${OTP_VERSION}-debian-${DEBIAN_VERSION}"
 ARG RUNNER_IMAGE="debian:${DEBIAN_VERSION}"
 
@@ -51,6 +52,8 @@ COPY lib lib
 
 COPY assets assets
 
+COPY dev-config dev-config
+
 # compile assets
 RUN mix assets.deploy
 
@@ -86,13 +89,21 @@ RUN chown nobody /app
 # set runner ENV
 ENV MIX_ENV="prod"
 
+# Copy litefs
+COPY --from=flyio/litefs:0.5 /usr/local/bin/litefs /usr/local/bin/litefs
+
 # Only copy the final release from the build stage
 COPY --from=builder --chown=nobody:root /app/_build/${MIX_ENV}/rel/trees ./
 
-USER nobody
+ADD dev-config/etc/litefs.dev.yml /tmp/litefs.yml
+RUN cp /tmp/litefs.yml /etc/litefs.yml
 
-CMD ["/app/bin/server"]
+# USER nobody
+
+ENTRYPOINT litefs mount
+
+# CMD ["/app/bin/server"]
 
 # Appended by flyctl
-ENV ECTO_IPV6 true
-ENV ERL_AFLAGS "-proto_dist inet6_tcp"
+# ENV ECTO_IPV6 true
+# ENV ERL_AFLAGS "-proto_dist inet6_tcp"
